--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             metaEl.setAttribute('name', 'viewport');
             var scale = 1 / window.devicePixelRatio;
             metaEl.setAttribute('content',"initial-scale="+scale+", maximum-scale="+scale+", minimum-scale="+scale+", user-scalable=no");
-            document.documentElement.firstElementChild.insertBefore(metaEl,document.title);
+            document.documentElement.firstElementChild.insertBefore(metaEl,document.head.firstElementChild.nextElementSibling);
           }
           function initRem(){
             document.documentElement.style.fontSize = document.documentElement.clientWidth / 7.2 + 'px';
